viya4/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-text-concepts/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-conceptTaxonomy
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concept-taxonomy
    sas.com/admin: namespace
  name: sas-concept-taxonomy
spec:
  host: $(INGRESS_HOST)
  path: /conceptTaxonomy
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-concept-taxonomy
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-conceptTaxonomy
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concept-taxonomy
    sas.com/admin: namespace
  name: sas-concept-taxonomy-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /conceptTaxonomy
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-concept-taxonomy
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-concepts
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concepts
    sas.com/admin: namespace
  name: sas-concepts
spec:
  host: $(INGRESS_HOST)
  path: /concepts
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-concepts
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-concepts
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-concepts
    sas.com/admin: namespace
  name: sas-concepts-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /concepts
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-concepts
  wildcardPolicy: Subdomain
